# data-science-escalavel

./: .all-contributorsrc  .buildinfo  .gitignore  00-como_ler_este_livro.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.html  README.md  TODO.md  cap01-como_ler_este_livro.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: 00-como_ler_este_livro.md  README.md  markdown-notebooks.ipynb
book/: README copy.md  README.md  _config.yml  _toc.yml
cap02-estrutura_projeto/: sec2-0-estrutura_projeto.html  sec2-1-introducao.html  sec2-2-melhores_praticas_funcoes.html
cap03-testes_unitarios/: sec3-0-testando_codigo.html  sec3-0-testes_unitarios.html  sec3-1-pytest.html  sec3-2-dicas_pytest.html
cap04-testando_dados/: pandera.html  schema.html  sec4-0-introducao.html  sec4-0-testando_dados.html  sec4-1-great_expectations.html  sec4-2-pandera.html  sec4-3-schema.html
cap05-construir_pipelines/: sec5-0-construir_pipelines.html  sec5-1-orquestre_um_projeto_de_ciencia_de_dados_em_python_com_prefect.html  sec5-1-prefect.html
cap06-acompanhamento_de_experimentos/: sec6-0-acompanhamento_de_experimentos.html  sec6-1-configure_seus_projetos_de_ciencia_de_dados_com_hydra.html  sec6-1-hydra.html
cap07-controle_de_versao/: sec7-0-controle_de_versao.html  sec7-1-introducao_ao_DVC.html  sec7-2-dagshub.html  sec7-3-pre_commit_plugins.html
cap07-introducao_ao_DVC/: sec7-1-introducao_ao_DVC_Controle_de_versionamento_de_dados.html  sec7-2-dagshub.html  (+1 more)
docs/: intro.html  (+8 more)
(+58 files in other folders)
