[tool.poetry]
name = "data-science-escalavel"
version = "0.1.0"
description = "Tradução para português brasileiro do livro Build a Reproducible and Maintainable Data Science Project da autora Khuyen Tran."
authors = ["Henrique <henrique.ajnbranco@gmail.com>"]
license = "Creative Commons Legal Code"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
