[tool.poetry]
name = "data-science-escalavel"
version = "0.1.0"
description = "Tradução para português brasileiro do livro Build a Reproducible and Maintainable Data Science Project da autora Khuyen Tran."
authors = ["Henrique <henrique.ajnbranco@gmail.com>"]
license = "Creative Commons Legal Code"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.12.3"
ghp-import = "^2.0.2"
pytest = "^7.1.1"
pytest-benchmark = {extras = ["histogram"], version = "^3.4.1"}
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
